syntax = "proto3";

package rivet.backend.pkg.game.version_create;

import "proto/common.proto";

message Request {
	rivet.common.Uuid game_id = 1;
	string display_name = 2;
}

message Response {
	rivet.common.Uuid version_id = 1;
}
